src/objects/Case_On_Hold_Log__c/Case_On_Hold_Log__c.object-meta.xml
<CustomObject>
    <label>Case On Hold Log</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Case On Hold Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case On Hold Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>