src/objects/Case_On_Hold_Log__c/fields/Action_Owner__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner__c</fullName>
    <label>Action Owner</label>
    <type>Email</type>
</CustomField>