src/objects/Case_On_Hold_Log__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case On Hold Logs</relationshipLabel>
    <relationshipName>Case_On_Hold_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>