src/objects/Case_On_Hold_Log__c/fields/Functional_Team_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Functional_Team_Completion_Date__c</fullName>
    <label>Functional Team Completion Date</label>
    <type>DateTime</type>
</CustomField>