src/objects/Case_On_Hold_Log__c/fields/Hold_Start__c.field-meta.xml
<CustomField>
    <fullName>Hold_Start__c</fullName>
    <label>Hold Start</label>
    <type>DateTime</type>
</CustomField>