src/objects/Case_On_Hold_Log__c/fields/Hold_Stop__c.field-meta.xml
<CustomField>
    <fullName>Hold_Stop__c</fullName>
    <label>Hold Stop</label>
    <type>DateTime</type>
</CustomField>