src/objects/Case_On_Hold_Log__c/fields/In_Progress_Status__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Status__c</fullName>
    <label>In Progress Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Status_hidden__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Change</fullName>
            </value>
            <value>
                <fullName>Account Extension</fullName>
            </value>
            <value>
                <fullName>Comm RO - CBM</fullName>
            </value>
            <value>
                <fullName>Comm RO - Contract Team inputs</fullName>
            </value>
            <value>
                <fullName>Comm RO - GBE / ABM</fullName>
            </value>
            <value>
                <fullName>Comm RO - ISC inputs</fullName>
            </value>
            <value>
                <fullName>Comm RO - Vendor Quote</fullName>
            </value>
            <value>
                <fullName>Completed - Added new PN dash or PN roll</fullName>
            </value>
            <value>
                <fullName>Completed – Completed Request</fullName>
            </value>
            <value>
                <fullName>Completed - Contract Manager action closed</fullName>
            </value>
            <value>
                <fullName>Completed - Contract problem corrected</fullName>
            </value>
            <value>
                <fullName>Completed - Created Contract and Flowdown (in Ariba)</fullName>
            </value>
            <value>
                <fullName>Completed - Created Contract and Flowdown (New Plant)</fullName>
            </value>
            <value>
                <fullName>Completed - Created Contract and Flowdown (New Sold To)</fullName>
            </value>
            <value>
                <fullName>Completed - Created Contract and Flowdown (not in Ariba)</fullName>
            </value>
            <value>
                <fullName>Completed - Created Contract and Flowdown (Stand Alone)</fullName>
            </value>
            <value>
                <fullName>Completed – Request already existed</fullName>
            </value>
            <value>
                <fullName>Completed – SAP Contract quantities updated</fullName>
            </value>
            <value>
                <fullName>Completed – Updated StandAlone</fullName>
            </value>
            <value>
                <fullName>COM SP- INPUT-Cost/Oth-ISC Buyer/Sc</fullName>
            </value>
            <value>
                <fullName>COM SP- INPUT-Cost/Oth-ISC Planner</fullName>
            </value>
            <value>
                <fullName>COM SP- INPUT-Discount Issue-SME</fullName>
            </value>
            <value>
                <fullName>COM SP- INPUT-Other</fullName>
            </value>
            <value>
                <fullName>COM SP- INPUT-PFEP/Oth-Demand Org</fullName>
            </value>
            <value>
                <fullName>COM SP- INPUT-Price/Approval-ABM</fullName>
            </value>
            <value>
                <fullName>COM SP- INPUT-Price-BDSI (KLX) Part</fullName>
            </value>
            <value>
                <fullName>COM SP- INPUT-Software Price-PL</fullName>
            </value>
            <value>
                <fullName>COM SP- REJECT-Fwd to RSMTO Mailbox</fullName>
            </value>
            <value>
                <fullName>COM SP - REJECT - GSE Part</fullName>
            </value>
            <value>
                <fullName>COM SP - REJECT - No Bid - Cannot price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>