src/objects/Case_On_Hold_Log__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>