src/objects/Case_On_Hold_Log__c/fields/Sub_Status_hidden__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status_hidden__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Hold</fullName>
                <default>true</default>
                <label>Contract Hold</label>
            </value>
            <value>
                <fullName>Customer Account Setup</fullName>
            </value>
            <value>
                <fullName>Customer Master Hold</fullName>
            </value>
            <value>
                <fullName>Pricing Hold</fullName>
            </value>
            <value>
                <fullName>Integrated Supply Chain Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>