src/objects/Case_On_Hold_Log__c/validationRules/Cannot_modify_the_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_modify_the_fields</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Case_Number__c) &amp;&amp; $Profile.Name  &lt;&gt;  &apos;CSO Busines Admin (US)&apos; &amp;&amp; $Profile.Name  &lt;&gt; &apos;System Administrator&apos;</errorConditionFormula>
    <errorDisplayField>Case_Number__c</errorDisplayField>
    <errorMessage>Case Number field can only be modified by a CSO Admin</errorMessage>
</ValidationRule>